Move container content to MP

--- a/doc-Managing_Providers/Containers_Providers.adoc
+++ b/doc-Managing_Providers/Containers_Providers.adoc
@@ -1,4 +1,4 @@
-= Managing Containers Providers
+= Containers Providers
 
 A containers provider is a service that manages container resources.
 
@@ -115,5 +115,4 @@ include::topics/Editing_a_Containers_Provider.adoc[]
 
 :leveloffset: 2
 include::topics/Viewing_a_Containers_Providers_Timeline.adoc[]
-
 
