--- a/doc-Managing_Providers/master.adoc
+++ b/doc-Managing_Providers/master.adoc
@@ -17,5 +17,13 @@ include::Cloud_Providers.adoc[]
 
 
 :leveloffset: 1
+include::Containers_Providers.adoc[]
+
+
+:leveloffset: 1
+include::Managing_Containers.adoc[]
+
+
+:leveloffset: 1
 include::Datastores.adoc[]
 
