Initial update of the release notes ahead of the GA.

--- a/doc-Release_Notes/master.adoc
+++ b/doc-Release_Notes/master.adoc
@@ -16,4 +16,5 @@ include::register_cfme.adoc[]
 include::ui_locale.adoc[]
 include::enabling_public_amis.adoc[]
 include::changes_in_the_core_set_of_ruby_gems.adoc[]
-
+include::release_information.adoc[]
+include::technical_notes.adoc[]
