--- a/doc-Managing_Providers/topics/Editing_a_Cloud_Provider.adoc
+++ b/doc-Managing_Providers/topics/Editing_a_Cloud_Provider.adoc
@@ -12,7 +12,7 @@ To use a different cloud provider, create a new one.
   This varies depending on the [label]#Type# of provider. 
 . Fill out the [label]#Credentials# by typing in a [label]#Username#, [label]#Password#, and a verification of this password ([label]#Confirm Password#). 
 +
-* If selecting an [label]#Amazon EC2#, generate an [label]#Access Key# in the [label]#Security Credentials# of your Amazon AWS account.
+* If selecting [label]#Amazon EC2#, generate an [label]#Access Key# in the [label]#Security Credentials# of your Amazon AWS account.
   The [label]#Access Key ID# acts as your [label]#User ID#, and your [label]#Secret Access Key# acts as your [label]#Password#. 
 * If selecting [label]#OpenStack#, use the Keystone User ID and Password for your login credentials. 
 
