Updates to address review feedback.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -9,7 +9,7 @@ CloudForms Management Engine (CFME) offers the following support for HTML5-based
 
 All of the above make use of the websocket protocol supported by all recent versions of browsers, and can use SSL to encrypt the websocket connection.
 
-OpenStack:: CFME only makes an API call to get the URL for the console and open that console in a web browser; see the https://access.redhat.com/documentation/en/red-hat-enterprise-linux-openstack-platform/version-7/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] section in the _Red Hat Enterprise Linux OpenStack Platform 7 Instances and Images Guide_ for more details.
+OpenStack:: CFME only makes an API call to get the URL for the console and open that console in a web browser; see https://access.redhat.com/documentation/en/red-hat-enterprise-linux-openstack-platform/version-7/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] in the _Red Hat Enterprise Linux OpenStack Platform 7 Instances and Images Guide_ for more details.
 
 Red Hat Enterprise Virtualization Manager and VMWare:: By default, he websocket connection runs over HTTPS or HTTP based on how the application was accessed.
 Under an appliance, you will most likely use HTTPS, and, therefore, the websocket connection will be wss:// (websocket with SSL).
@@ -26,9 +26,9 @@ You can control the encryption of data between proxy processes running on the ap
  > :key : certs/server.cer.key 
 ------
 
-The value for encrypt defaults to true for SSL connections and to false for non-SSL encryption, however it can be overidden here. For example, you can access the application using HTTP and yet use wss:// for the websocket proxy.
+The value for [label]#encrypt# defaults to [literal]+true+ for SSL connections and to [literal]+false+ for non-SSL encryption, however it can be overidden here. For example, you can access the application using HTTP and yet use wss:// for the websocket proxy.
 
 A certificate that is accepted by your browser is required. You can obtain a certificate from a public certificate authority such as Verisign, Thawte, or RapidSSL. To install certificates in CFME, see https://access.redhat.com/articles/449033[Replacing SSL Certificates in CloudForms Management Engine].
 
-IMPORTANT: If you use the default self-signed certificate supplied with the Appliance, you will most likely have an unreliable experience based on your browser.
+IMPORTANT: Red Hat recommends not to use the default self-signed certificate supplied with the Appliance, as the Clouforms Management Engine may not perform reliably.
 
