--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -11,7 +11,7 @@ All of the above make use of the websocket protocol supported by all recent vers
 
 OpenStack:: CFME only makes an API call to get the URL for the console and open that console in a web browser; see https://access.redhat.com/documentation/en/red-hat-enterprise-linux-openstack-platform/version-7/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] in the _Red Hat Enterprise Linux OpenStack Platform 7 Instances and Images Guide_ for more details.
 
-Red Hat Enterprise Virtualization Manager and VMWare:: By default, he websocket connection runs over HTTPS or HTTP based on how the application was accessed.
+Red Hat Enterprise Virtualization Manager and VMWare:: By default, the websocket connection runs over HTTPS or HTTP based on how the application was accessed.
 Under an appliance, you will most likely use HTTPS, and, therefore, the websocket connection will be wss:// (websocket with SSL).
 
 *Configuration of SSL Encryption*
