Updated screen capture for viewing hosts and clusters

--- a/doc-Managing_Providers/topics/Viewing_Hosts_and_Clusters.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Hosts_and_Clusters.adoc
@@ -7,5 +7,5 @@ Access a tree view of the hosts and clusters for a provider from the [label]#Pro
 . Click on the [label]#Relationships# accordion, then click [label]#'Hosts & Clusters'#. 
 
 
-image::images/2201.png[]
+image::images/hostsandclusters.png[]
 
