--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -786,6 +786,10 @@ Amazon users must be added as a CloudForms Management Engine user or belong to a
 
 If a user has group memberships in another LDAP Forest, then specify the settings to access the memberships in the trusted forest.
 
+When trusted forests are added to the authentication configuration, they are used only for finding groups that a user is a member of. CloudForms Management Engine will first collect all of the user's groups from the primary LDAP directory. Then it will collect any additional groups that the user is a member of from all of the configured forests.
+
+The collected LDAP groups are used to match, by name, against the groups defined in CloudForms Management Engine. The user must be a member of at least one matching LDAP group to be successfully authenticated.
+
 ====== Adding Settings for a Trusted Forest
 
 To Add Settings for a Trusted Forest:
