--- a/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
@@ -20,7 +20,7 @@ The procedure below describes how to authenticate the VMware vCenter hosts.
 
 == Using a Non-Administrator Account for Host Credentials
 
-After adding a VMware vCenter infrastructure provider, you must authenticate its hosts to enable full functionality. You can use administrator credentials, or create another user assigned to a role created for Red Hat CloudForms Management Engine. See the VMware documentation for instructions on how to create a role. You need to enable the following privileges:
+After adding a VMware vCenter infrastructure provider, you must authenticate its hosts to enable full functionality. You can use administrator credentials, or create another user assigned to a role (See the VMware documentation for instructions on how to create a role) created for Red Hat CloudForms Management Engine. The following privileges should be enabled for the non-administrator user:
 
 From the Global group, check:
 
