BZ#1226306-Removing SmartProxy deprecated content

--- a/doc-Appliance_Hardening_Guide/Firewall.adoc
+++ b/doc-Appliance_Hardening_Guide/Firewall.adoc
@@ -442,7 +442,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            CFME SmartProxy installed on Windows or Linux
+                            CFME SmartProxy installed on VMWare ESX Server
 
 
 |
@@ -464,7 +464,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            CFME SmartProxy installed on Windows or Linux
+                            CFME SmartProxy installed on VMWare ESX Server
 
 
 |
