BZ#1226306-Removing SmartProxy deprecated content

--- a/doc-Deployment_Planning_Guide/Security.adoc
+++ b/doc-Deployment_Planning_Guide/Security.adoc
@@ -20,8 +20,8 @@
 |CFME Appliance (Notifier) |SNMP Server |SNMP (TCP) |162 |  |SNMP Trap Send
 |CFME Appliance (Notifier) |Mail server |SMTP |25 |  |SNMP Trap Send
 |CFME Appliance (any role) |NTP Server |NTP |  |123 |Time Source
-|CFME Appliance |CFME SmartProxy installed on Windows or Linux |HTTPS |1139 |  |Communication with SmartProxy
-|CFME SmartProxy installed on Windows or Linux |CFME Appliance |HTTPS |443 |  |SmartProxy Heartbeat
+|CFME Appliance |CFME SmartProxy installed on VMWare ESX Server |HTTPS |1139 |  |Communication with SmartProxy
+|CFME SmartProxy installed on VMWare ESX Server |CFME Appliance |HTTPS |443 |  |SmartProxy Heartbeat
 |CFME Appliance |DNS Server |UDP |  |53 |DNS Lookups
 |============================================================================================================
 
