Removed references to the Settings and Operations Guide.

--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
@@ -3,9 +3,8 @@
 Use this action for assigning specific analysis profiles to virtual
 machines. You must create an analysis profile before assigning it to an
 action. You can only assign this action to an analysis start event. See
-https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms
-Management Engine Settings and Operations Guide] for information on how
-to create analysis profiles.
+the General Configuration Guide for information on how to create analysis 
+profiles.
 
 . Navigate to `Control` -> `Explorer`.
 
