--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
@@ -2,9 +2,7 @@
 
 To send SNMP traps from the CloudForms Management Engine server, you
 must have the `Notifier` server role and the SNMP daemons enabled. For
-information on enabling SNMP, see
-https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms
-Management Engine Settings and Operations Guide].
+information on enabling SNMP, see the General Configuration guide.
 
 . Navigate to `Control` -> `Explorer`.
 
