--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_e-mail_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_e-mail_Action.adoc
@@ -2,9 +2,8 @@
 
 To send emails from the CloudForms Management Engine server, you must
 have the notifier server role enabled and have defined settings for SMTP
-email. For further information regarding SMTP, see
-https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms
-Management Engine Settings and Operations Guide].
+email. For further information regarding SMTP, see the General Configuration
+guide.
 
 . Navigate to `Control` -> `Explorer`.
 
