--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -400,7 +400,7 @@ image:2048.png[]
 . Click +File+ to collect information about a file or group of files.
 . From the +File Entry+ area, click image:plus_green.png[] (+Click to add a new entry+) to add a file or group of files.
 image:2047.png[]
-* Check +Collect Contents+ to not only check for existence, but also gather the contents of the file. If you do this, then you can use the contents to create policies in CloudForms Management Engine Control. See +CloudForms Management Engine Control Guide+.
+* Check +Collect Contents+ to not only check for existence, but also gather the contents of the file. If you do this, then you can use the contents to create policies in CloudForms Management Engine Control. See the _Defining Policies and Profiles_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 . Click +Event Log+ to specify event log entries to collect.
 . From the +Event Log Entry+ area, click image:plus_green.png[] (+Click to add a new entry+) to add a type of event log entry. Type in a +Name+. You can type in a specific message to find in +Filter Message+. In +Level+, set the value for the level of the entry and above. Specify the +Source+ for the entry.
 Finally, set the # number of days that you want to collect event log entries for. If you set this to 0, it will go as far back as there is data available.
@@ -590,7 +590,7 @@ These roles are enabled by default on all servers.
 |Database Operations|Use Database Operations to enable this CloudForms Management Engine server to run database backups or garbage collection.
 |Database Synchronization|Use Database Synchronization to enable this CloudForms Management Engine server's VMDB to replicate to a higher-level VMDB. This should only be enabled after creating settings for the Replication Worker.
 |Event Monitor|This role is enabled by default and provides the information shown in timelines. Event Monitor is responsible for the work between the CloudForms Management Engine server and your providers. It starts 2 workers for each provider. One worker, the monitor, is responsible for maintaining a connection to a provider, catching events, and putting them on the CloudForms Management Engine message queue for processing. The second worker, the handler, is a message queue worker responsible for delivering only those messages for a provider. You should have at least one of these in each zone.
-|Notifier|Use this role if you will be using CloudForms Management Engine Control or Automate to forward SNMP traps to a monitoring system or send e-mails. See CloudForms Management Engine Control Guide for details on creating SNMP alerts. If more than one CloudForms Management Engine server in a specific zone has this role, only one will be active at a time.
+|Notifier|Use this role if you will be using CloudForms Management Engine Control or Automate to forward SNMP traps to a monitoring system or send e-mails. See <<Configuring SNMP>> for details on creating SNMP alerts. If more than one CloudForms Management Engine server in a specific zone has this role, only one will be active at a time.
 |Provider Inventory|This role is enabled by default. This role is responsible for refreshing provider information including EMS, hosts, virtual machines, and clusters, and is also responsible for capturing datastore file lists. If more than one CloudForms Management Engine server in a specific zone has this role, only one will be active at a time.
 |Provider Operations|This role is enabled by default. This role sends stop, start, suspend, shutdown guest, clone, reconfigure, and unregister to the provider, directly from the console or through a policy action if you have CloudForms Management Engine Control. More than one CloudForms Management Engine server can have this role in a zone.
 |RHN Mirror|An appliance with RHN Mirror enabled acts as a server containing a repository with the latest CloudForms Management Engine packages. This also configures other Appliances within the same region to point to the chosen RHN Mirror server for updates. This provides a low bandwidth method to update environments with multiple Appliances.
