--- a/doc-General_Configuration/Smart_Proxies.adoc
+++ b/doc-General_Configuration/Smart_Proxies.adoc
@@ -18,7 +18,7 @@ Requirements:
 * On ESX, SSH (Secure Shell) must be enabled. This is usually port 22.
 * 300 MB free disk space to install and run the SmartProxy.
 * Administrator or root credentials.
-* The host must already be in the VMDB either by discovery or manually. See the Insight Guide for information on discovery.
+* The host must already be in the VMDB either by discovery or manually. See the _Managing Infrastructure and Inventory_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for information on discovery.
 
 
 === Entering Credentials and Operating System for the Target Host
