--- a/doc-Managing_Providers/topics/Enabling_AWS_Config_Notifications.adoc
+++ b/doc-Managing_Providers/topics/Enabling_AWS_Config_Notifications.adoc
@@ -11,7 +11,7 @@ Amazon's AWS Config notifies subscribers of changes in a region through its Simp
 
 You can assign Red Hat CloudForms policies to the AWS events listed below.
 The appliance performs a provider refresh on all these events except for [code]+AWS_EC2_Instance_UPDATE+.
-See the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/[Control Guide] for more information on working with CloudForms policies. 
+See the _Defining Policies and Profiles_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for more information on working with CloudForms policies. 
 
 [cols="1,1,1", options="header"]
 |===
