--- a/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
@@ -9,7 +9,6 @@ In the example below, we look for a host whose datastore has less than 5% free s
 . Click on the [label]#Alerts# accordion, then click  image:images/1847.png[] ([label]#Configuration#),  image:images/1848.png[] ([label]#Add a new Alert#). 
 . In the [label]#Info# area: 
 +
-
 image::images/1985.png[]
 +
 * Type in a description for the alert. 
@@ -19,12 +18,12 @@ image::images/1985.png[]
 
 . Use the expression editor to create your expression.
   This is the same expression editor used to create Conditions.
-  For details on how to use the expression editor, see https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Control_Guide/chap-Conditions.html#Creating_a_Condition[Creating a Condition] in the Control Guide. 
+  For details on how to use the expression editor, see the _Defining Policies and Profiles_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 +
-
 image::images/1986.png[]
-
++
 . Click  image:images/1863.png[] ([label]#Commit expression element changes#) to accept the expression. 
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
 . Click btn:[Add]. 
+
