Fix more cross-references

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes.adoc
@@ -3,7 +3,7 @@
 
 CloudForms Management Engine can collect processes running on Windows virtual machines.
 To do this, enter domain credentials for the zone where the virtual machine is located.
-For more information, see the _CloudForms General Configuration Guide_.
+For more information, see the _CloudForms General Configuration_ guide.
 The virtual machine must be running and must have an IP address in the VMDB, usually obtained from a SmartState Analysis.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
