--- a/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
@@ -2,7 +2,7 @@
 
 CloudForms Management Engine can collect processes running on Windows instances.
 To do this, enter domain credentials for the zone where the instance is located.
-For more information, see the _CloudForms General Configuration Guide_.
+For more information, see the _CloudForms General Configuration_ guide.
 The instance must be running and must have an IP address in the VMDB, usually obtained from a SmartState Analysis.
 
 . Navigate to menu:Clouds[Instances].
