--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Clusters.adoc
@@ -1,7 +1,7 @@
 = Tagging Clusters
 
 Use tags to categorize clusters.
-Before assigning tags, create them using the instructions in the _CloudForms General Configuration Guide_.
+Before assigning tags, create them using the instructions in the _CloudForms General Configuration_ guide.
 
 . Navigate to menu:Infrastructure[Clusters].
 . Check the Clusters to tag.
