--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
@@ -1,7 +1,7 @@
 = Tagging Security Groups
 
 Apply tags to security groups to categorize them.
-Before assigning tags, create them using instructions in the _CloudForms General Configuration Guide_.
+Before assigning tags, create them using instructions in the _CloudForms General Configuration_ guide.
 
 . Navigate to menu:Clouds[Security Groups].
 . Select the security group to tag.
