--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_a_Resource_Pool.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_a_Resource_Pool.adoc
@@ -1,7 +1,7 @@
 = Tagging a Resource Pool
 
 Use tags to categorize a resource pool.
-Before assigning tags, create them using the instructions in the _CloudForms General Configuration Guide_.
+Before assigning tags, create them using the instructions in the _CloudForms General Configuration_ guide.
 
 . Navigate to menu:Infrastructure[Resource Pools].
 . Click the resource pool to tag.
