--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
@@ -1,7 +1,7 @@
 = Viewing Event Logs for an Instance or Image
 
 Using an [label]#Analysis Profile#, collect event log information from your instances.
-See the "Creating a Default Analysis Profile" section in the _CloudForms General Configuration Guide_.
+See section _Setting a Default Analysis Profile_ in the _CloudForms General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 NOTE: This feature is only available for Windows.
 
@@ -12,3 +12,4 @@ NOTE: This feature is only available for Windows.
 
 The collected event log entries are displayed.
 Sort this list by clicking on the column headers.
+
