--- a/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
@@ -1,7 +1,7 @@
 = Tagging Cloud Providers
 
 Apply tags to all cloud providers to categorize them together at the same time.
-Before assigning tags, create them using instructions in the _CloudForms Management Engine Settings and Operations Guide_. 
+Before assigning tags, create them using instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 .Procedure: To Tag Cloud Providers
 . Navigate to menu:Clouds[Providers]. 
