--- a/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
@@ -1,7 +1,7 @@
 = Tagging Containers Providers
 
 Apply tags to all containers providers to categorize them together at the same time.
-Before assigning tags, create them using instructions in the _Red Hat CloudForms 4.0 General Configuration Guide_, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/. 
+Before assigning tags, create them using instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 .Procedure: To Tag Containers Providers
 . Navigate to menu:Containers[Providers]. 
