--- a/doc-Managing_Providers/topics/Tagging_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Tagging_a_Datastore.adoc
@@ -1,7 +1,7 @@
 = Tagging a Datastore
 
 Use tags to categorize a datastore.
-Before assigning tags, create them with instructions in the _CloudForms Management Engine Settings and Operations Guide_. 
+Before assigning tags, create them with instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 . Navigate to menu:Infrastructure[Datastores]. 
 . Click the datastore to tag. 
