--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
@@ -3,7 +3,7 @@
 
 Normal operating range alerts enables you to be notified when the normal operating range is exceeded, or falls below for a period of time from 1 minute to 2 hours.
 Capacity and utilization must be enabled for normal operating ranges to be calculated.
-See https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide] for instructions. 
+See the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for instructions.
 
 .Procedure: To Create a Normal Operating Range Alert
 . Navigate to menu:Control[Explorer]. 
@@ -26,4 +26,5 @@ image::images/1976.png[]
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process.
   See <<_to_create_an_alert,To create an Alert>>. 
-. Click btn:[Add]. 
+. Click btn:[Add].
+
