--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
@@ -5,7 +5,7 @@ In this section, the basics of creating an Alert are described.
 Detailed instructions for the specific types of Alerts are given in the sections following. 
 
 To send emails or SNMP traps from the CloudForms Management Engine server, you must have the [literal]+Notifier+ server role enabled and have set up SMTP email or SNMP traps.
-For further information, see https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide]. 
+For further information, see the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 .Procedure: To Create an Alert
 . Navigate to menu:Control[Explorer]. 
@@ -115,4 +115,5 @@ image::images/1966.png[]
 . To invoke automation, check [label]#Send a Management Event#.
   Type in the name of the event.
   This item exists in the [label]#Process/Event Class#. 
-. Click btn:[Add]. 
+. Click btn:[Add].
+
