--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
@@ -3,7 +3,7 @@
 
 Hourly performance alerts enable you to be notified immediately when an hourly performance threshold has been met for a cluster.
 Capacity and Utilization must be enabled for performance thresholds to be detected.
-See https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide] for instructions. 
+See the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for instructions.
 
 .Procedure: To Create an Hourly Performance Alert
 . Navigate to menu:Control[Explorer]. 
@@ -24,3 +24,4 @@ image::images/1979.png[]
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
 . Click btn:[Add]. 
+
