--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
@@ -1,10 +1,6 @@
 ==== Creating an Assign Profile to Analysis Task Action
 
-Use this action for assigning specific analysis profiles to virtual
-machines. You must create an analysis profile before assigning it to an
-action. You can only assign this action to an analysis start event. See
-the General Configuration Guide for information on how to create analysis 
-profiles.
+Use this action for assigning specific analysis profiles to virtual machines. You must create an analysis profile before assigning it to an action. You can only assign this action to an analysis start event. See the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for information on how to create analysis profiles.
 
 . Navigate to `Control` -> `Explorer`.
 
@@ -20,3 +16,4 @@ image:../images/1905.png[image]
 . Select a profile from the `Analysis profiles`.
 
 . Click `Add`.
+
