--- a/doc-Managing_Providers/topics/Tagging_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Multiple_Management_Systems.adoc
@@ -2,7 +2,7 @@
 = Tagging Multiple Providers
 
 Apply tags to all providers to categorize them together at the same time.
-Before assigning tags, create them using instructions in the _CloudForms Management Engine Settings and Operations Guide_. 
+Before assigning tags, create them using instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Check the providers to tag. 
