--- a/doc-Monitoring_Alerts_and_Reporting/Chargeback.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Chargeback.adoc
@@ -3,7 +3,7 @@
 
 The chargeback feature allows you to calculate monetary virtual machine charges based on owner or company tag.
 To use this feature you must be collecting capacity and utilization data.
-For information on server control settings and capacity & utilization collection settings, see the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Settings_and_Operations_Guide/index.html[Red Hat CloudForms 4.0 Settings and Operations Guide]. 
+For information on server control settings and capacity & utilization collection settings, see the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 :leveloffset: 2
 include::topics/Chargeback_Rates.adoc[]
