--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
@@ -3,7 +3,7 @@
 
 Real Time Performance alerts enables you to be notified immediately when a performance threshold has been met for a virtual machine, host, or cluster.
 Capacity and Utilization must be enabled for performance thresholds to be detected.
-See https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide] for instructions. 
+See the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for instructions.
 
 .Procedure: To Create a Real Time Performance Alert
 . Navigate to menu:Control[Explorer]. 
@@ -29,4 +29,5 @@ image::images/1978.png[]
 
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
-. Click btn:[Add]. 
+. Click btn:[Add].
+
