--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -14,7 +14,7 @@ image::images/2277.png[]
 +
 * In the [label]#Basic Information# area, type in a [label]#Name# and [label]#Description# for the schedule. 
 * By default. [label]#Active# is checked to enable the scan. 
-* Check [label]#E-Mail after Running# to send an email after the report has been generated. The email will be sent to the users email address as show in the [label]#Accounts# area in [label]#Configuration#. The email will include a link to the report. See https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide] to learn how to verify the address, and to validate outgoing email settings. 
+* Check [label]#E-Mail after Running# to send an email after the report has been generated. The email will be sent to the users email address as show in the [label]#Accounts# area in [label]#Configuration#. The email will include a link to the report. See the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, to learn how to verify the address, and to validate outgoing email settings.
 
 . The [label]#Report Selection# area is pre-populated if you added the schedule directly from the report.
   If you are adding from the schedule according, use the [label]#Filter# drop downs to select the report that you want to schedule. 
@@ -58,4 +58,5 @@ image::images/2283.png[]
 . Click btn:[Add]. 
 
 NOTE: You may need to disable, change the report filter, or change the frequency of a schedule.
-To do this, you will need to edit the schedule. 
+To do this, you will need to edit the schedule.
+
