--- a/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_schema_for_a_class1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_schema_for_a_class1.adoc
@@ -29,9 +29,7 @@ data from those child objects into the current object. If you give
 `collect` a name value, it will store the method result in an attribute of
 the current object with that name.
 
-. `On Entry`, `On Exit`, `On Error`, `Max Retries`, and `Max Time` are fields used mostly for state machines. Leave blank if not applicable. For more information, see
-https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Lifecycle_and_Automation_Guide/sect-State_Machines.html[State
-Machines] in the Lifecycle and Automation Guide.
+. `On Entry`, `On Exit`, `On Error`, `Max Retries`, and `Max Time` are fields used mostly for state machines. Leave blank if not applicable. For more information, see the _Provisioning Virtual Machines and Hosts_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
 . Click image:../images/1863.png[image] (`Add this entry`) to confirm the
 fields values.
@@ -48,3 +46,4 @@ You may need to edit a class schema to reorder, add, edit, or remove a
 field. Classes define the order in which fields are processed and you
 may need to process some items before others.
 ======
+
