--- a/doc-Provisioning_Virtual_Machines_and_Hosts/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/Provisioning_Requests.adoc
@@ -205,7 +205,7 @@ Add a customization template to provide +Kickstart+, +Cloud-Init+, or +Sysprep+ 
 
 .Cloud-Init Requirements
 * When creating a template using Red Hat Virtualization, install the +cloud-init+ package on the source virtual machine. This enables Cloud-Init to source configuration scripts when a virtual machine built on that template boots.
-* See the https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.4/html/Administration_Guide/index.html[Red Hat Enterprise Virtualization Administration Guide] for more information on using Cloud-Init in a Red Hat Enterprise Virtualization environment.
+* See the https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.5/html/Administration_Guide/index.html[Red Hat Enterprise Virtualization Administration Guide] for more information on using Cloud-Init in a Red Hat Enterprise Virtualization environment.
 * See the http://cloudinit.readthedocs.org/en/latest/[Cloud-Init Documentation] web site for example scripts.
 
 .Kickstart Requirements for ISO Provisioning
@@ -315,6 +315,7 @@ In +Request Information+, type in at least a +First Name+ and +Last Name+ and an
 ==========
 Parameters with a * next to the label are required to submit the provisioning request. To change the required parameters, see Customizing Provisioning Dialogs.
 ==========
+
 . Click the +Purpose+ tab to select the appropriate tags for the provisioned virtual machines.
 . Click the +Catalog+ tab to select the template to provision from. This tab is context sensitive based on provider.
 . For templates on VMware providers:
@@ -327,7 +328,7 @@ image:2328.png[]
 . For templates on Red Hat providers:
 .. Select the +Name+ of a template to use.
 .. For +Provision Type+, select either +ISO+, +PXE+, or +Native Clone+. You must select +Native Clone+ in order to use a Cloud-Init template.
-... If +Native Clone+ is selected, select +Linked Clone+ to create a linked clone to the virtual machine instead of a full clone. This is equivalent to *Thin Template Provisioning in Red Hat Enterprise Virtualization. Since a snapshot is required to create a linked clone, this box is only enabled if a snapshot is present. Select the snapshot to use for the linked clone.
+... If +Native Clone+ is selected, select +Linked Clone+ to create a linked clone to the virtual machine instead of a full clone. This is equivalent to _Thin Template Provisioning_ in Red Hat Enterprise Virtualization. Since a snapshot is required to create a linked clone, this box is only enabled if a snapshot is present. Select the snapshot to use for the linked clone.
 ... If +ISO+ is selected, select an ISO +Image+ to use for provisioning
 ... If +PXE+ is selected, select a PXE +Server+ and +Image+ to use for provisioning
 .. Under +Count+, select the number of virtual machines you want to create in this request.
