--- a/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
@@ -14,7 +14,7 @@ The Ruby gems in this set are subject to change, and have changed since CloudFor
 While gems can be imported into automation methods using [code]+require+, it is recommended that the authors of the automation methods clearly document the use of gems either in the core set or a custom set.
 It is the responsibility of the author of such custom automation to own the life cycle of any gem being referenced in those methods. 
 
-The https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Release_Notes/index.html[Red Hat CloudForms 4.0 Release Notes] list Ruby gems that have been added, updated, or removed in the latest version of CloudForms Management Engine.
+The _Red Hat CloudForms 4.0 Release Notes_, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, list Ruby gems that have been added, updated, or removed in the latest version of CloudForms Management Engine.
 
 For lists of Ruby gems included in different CloudForms Management Engine releases, see the following article:
 
