--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -1,9 +1,10 @@
 [[registering_and_updating_cloudforms_management_engine]]
 == Registering and Updating CloudForms Management Engine
 
-The +Red Hat Updates+ page enables you to edit customer information,
-register appliances, and update appliances. Editing customer information
-enables you to determine the registration point, User ID, and password.
+The +Red Hat Updates+ page, accessible from +Configure → Configuration+ →
++[Region]+, enables you to edit customer information, register appliances,
+and update appliances. Editing customer information enables you to determine
+the registration point, User ID, and password.
 Red Hat CloudForms prompts you to update the Server URL when updating the
 registration point to a local Red Hat Satellite. The +Status of Available
 Servers+ area provides options to refresh, register, check for updates,
