Made minor updates to the Release Notes.

--- a/doc-Release_Notes/deprecated_technology.adoc
+++ b/doc-Release_Notes/deprecated_technology.adoc
@@ -4,7 +4,7 @@
 The following technologies have been deprecated, and are not available in
 this release of Red Hat CloudForms.
 
-*SOAP API*
+SOAP API::
 
 With this release, the SOAP API provided in previous releases of
 Red Hat CloudForms has now been deprecated, and is no longer
@@ -13,13 +13,20 @@ Red Hat CloudForms 3.2, and also includes new functionality
 provided with this release. Red Hat recommends using the REST API
 for all integration projects.
 
-*Ruby Scripts in Condition Filtering*
+Ruby Scripts in Condition Filtering::
 
 With this release, the option to filter conditions for both Control
 and reporting based on Ruby scripts has been removed from the list
 of options.
 
-*Internet Explorer 9 Support*
+Internet Explorer 9 Support::
 
 Red Hat CloudForms 4.0 is the last release to support Windows Internet
 Explorer 9, which will be deprecated in Red Hat CloudForms 4.1.
+
+Red Hat Network Support::
+
+With this release, the Content Delivery Network, including both the Content
+Delivery Network itself and Red Hat Satellite 6,  is the only supported
+distribution channel for Red Hat CloudForms 4.0. Red Hat Network Satellite
+is no longer supported.
