--- a/doc-Scripting_Actions_in_CloudForms/topics/Ruby_method.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/Ruby_method.adoc
@@ -3,34 +3,30 @@
 [source,ruby]
 -----------------------------------------------------------------------------------------------------------
 
-#Â CloudForms Management Engine Automate Method
+# CloudForms Management Engine Automate Method
 #
-$evm.log("info", "CloudForms Management Engine Automate MethodÂ  Building VM Provisioning Request Started")
+$evm.log("info", "CloudForms Management Engine Automate Method  Building VM Provisioning Request Started")
 #
-Â 
-provÂ Â Â  = $evm.root['miq_provision']
-Â 
-Â 
-Â Â Â  # arg1 = version
-Â Â Â  args = ['1.1']
-Â Â Â  # arg2 = templateFields
-Â Â Â  args << "name=App"
-Â Â Â  # arg3 = vmFields
-Â Â Â  args << 'vm_name=CRM_APP|request_type=template'
-Â Â Â  #args << 'vm_name=service_test2|request_type=template|placement_host_name=esx.asdf.com'
-Â Â Â  #args << 'request_type=template'
-Â Â Â  # arg4 = requester
-Â Â Â  args << 'owner_email=admin@asd.com|owner_last_name=Admin|owner_first_name=Admin|user_name=admin'
-Â Â Â  #args << 'user_name=crm'
-Â Â Â  # arg5 = tags
-Â Â Â  args << 'crm=true'
-Â Â Â  # arg6 = WS Values
-Â Â Â  args << nil
-Â Â Â  # arg7 = emsCustomAttributes
-Â Â Â  args << nil
-Â Â Â  # arg8 = miqCustomAttributes
-Â Â Â  args << nil
-Â 
-Â Â Â  $evm.log("info","Building provisioning request with the following arguments: <#{args.inspect}>")
-Â Â Â  result = $evm.execute('create_provision_request', *args)
+ 
+prov= $evm.root['miq_provision']
+
+  # arg1 = version
+  args = ['1.1']
+  # arg2 = templateFields
+  args << {'name' => 'App'}
+  # arg3 = vmFields
+  args << {'vm_name' => 'CRM_APP', 'request_type' => 'template'}
+  # arg4 =  requester
+  args << {'owner_email' => 'admin@asd.com', 'owner_last_name' => 'Admin', 'owner_first_name' => 'Admin', 'user_name' => 'admin'}
+  # arg5 =  tags
+  args << {'crm' => 'true'}
+  # arg6 =  WS Values
+  args << nil
+  # arg7 = emsCustomAttributes
+  args << nil
+  # arg8 = miqCustomAttributes
+  args << nil
+
+$evm.log("info","Building provisioning request with the following arguments: <#{args.inspect}>")
+result = $evm.execute('create_provision_request', *args)
 -----------------------------------------------------------------------------------------------------------
