added provisioning request attribute tables and a new section for monitoring a provisioning request

--- a/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
@@ -107,6 +107,8 @@ include::topics/provision_request.adoc[]
 :leveloffset: 3
 include::topics/provision_requests.adoc[]
 
+:leveloffset: 3
+include::topics/monitoring_request.adoc[]
 
 
 :leveloffset: 2
