--- a/doc-Red_Hat_CloudForms_REST_API/chap-Reference_Guide.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/chap-Reference_Guide.adoc
@@ -24,3 +24,6 @@ include::topics/Sub-Collection_Queries.adoc[]
 :leveloffset: 2
 include::topics/Available_Actions.adoc[]
 
+
+:leveloffset: 2
+include::topics/provision_attributes.adoc[]
