--- a/doc-Red_Hat_CloudForms_REST_API/topics/provision_request.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/provision_request.adoc
@@ -10,6 +10,8 @@ specified.
 
 ==== Request:
 
+Provisioning requests are made available via the following entrypoint, either by specifying a _create_ action or by posting the request directly
+to */api/provision_requests*:
 ----
 POST /api/provision_requests
 ----
