--- a/doc-Red_Hat_CloudForms_REST_API/topics/provision_attributes.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/provision_attributes.adoc
@@ -25,17 +25,136 @@ Supported fields are:
  name=[VM Template Name]  Example: template_1
  guid=[guid value from vms resource]
  ems_guid=[uid_ems value from vms resource]
-| vm_fields | hash | Allows for the setting of properties on the Catalog, Hardware, Network, Customize, and Schedule tabs in the Provisioning dialog.
-| requester | hash | Allows for the setting of properties on the Requester tab in the Provisioning dialog
-| tags | hash | Tags to apply to newly created virtual machine
+| vm_fields | hash | Allows for setting properties on the Service Catalog, Hardware, Network, Customize, and Schedule tabs in the Provisioning dialog.
+| requester | hash | Allows for the setting of properties on the Requester tab in the Provisioning dialog.
+| tags | hash | Tags to apply to newly created virtual machine.
 
 Example: network_location=Internal
 cc=001
 | additional_values | hash | Additional values are name-value pairs stored with a provision request, but not used by the core provisioning code. These values are usually referenced from automate methods for custom processing.
 
-Example: Store a request_id from an external system so the system can be notified during the provisioning process
-| ems_custom_attributes | hash | Custom attributes applied to the virtual machine through the Provider as part of provisioning
-| miq_custom_attributes | hash | Custom attributes applied to the virtual machine and stored in the database as part of provisioning
+Example: Store a request_id from an external system so the system can be notified during the provisioning process.
+| ems_custom_attributes | hash | Custom attributes applied to the virtual machine through the Provider as part of provisioning.
+| miq_custom_attributes | hash | Custom attributes applied to the virtual machine and stored in the database as part of provisioning.
+|=====================
+
+
+[[service-catalog-attributes]]
+== Service Catalog Attributes
+
+These attributes are used in the *vm_fields* attribute group:
+
+[cols="1<,1<,3<",options="header",]
+|=====================
+| Attribute | Type | Description | Default
+| number_of_vms | integer | Number of virtual machines - maximum 50 | 1
+| vm_description | string | Virtual machine description - maximum 100 characters |
+| vm_prefix | string | Virtual machine name prefix or suffix |
+| src_vm_id | integer | Name |
+| vm_name | string | Virtual machine name |
+| pxe_image_id | string | Image |
+| pxe_server_id | integer | Server |
+| host_name | string | Host name |
+| provision_type | string | Provision type | vmware
+| linked_clone | boolean | Linked clone | false
+| snapshot | string | Snapshot |
+| vm_filter | integer | Filter |
+|=====================
+
+
+[[hardware-attributes]]
+== Hardware Attributes
+
+These attributes are used in the *vm_fields* attribute group:
+
+[cols="1<,1<,3<,2<,1<",options="header",]
+|=====================
+| Attribute | Type | Description | Values | Default
+| disk_format | string | Disk format | thick, thin, unchanged | unchanged
+| cpu_limit | integer | CPU (MHz) | |
+| memory_limit | integer | Memory (MB) | |
+| number_of_sockets | integer | Number of sockets | 1, 2, 4, 8 | 1
+| cores_per_socket | integer | Cores per socket | 1, 2, 4, 8 | 1
+| cpu_reserve | integer | CPU (MHz) | |
+| vm_memory | string | Memory (MB) | 1024, 2048, 4096 | 1024
+| memory_reserve | integer | Memory (MB) | |
+| network_adapters | integer | Network adapters | 1, 2, 3, 4 | 1
+|=====================
+
+
+[[network-attributes]]
+== Network Attributes
+
+These attributes are used in the *vm_fields* attribute group:
+
+[cols="1<,1<,3<",options="header",]
+|=====================
+| Attribute | Type | Description
+| vlan | string | vLAN
+| mac_address | string | MAC address
+|=====================
+
+
+[[custom-attributes]]
+== Custom Attributes
+
+These attributes are used in the *vm_fields* attribute group:
+
+[cols="1<,1<,3<,2<,1<",options="header",]
+|=====================
+| Attribute | Type | Description | Values | Default
+| dns_servers | string | DNS server list | |
+| sysprep_organization | string | Organization | |
+| sysprep_password | string | New administrator password | |
+| sysprep_custom_spec | string | Name | |
+| sysprep_server_license_mode | string | Identification | perServer, perSeat |
+| ldap_ous | string | LDAP group | |
+| sysprep_timezone | string | Timezone | |
+| dns_suffixes | string | DNS suffix list | |
+| sysprep_product_id | string | ProductID | |
+| sysprep_identification | string | Identification | domain, workgroup |
+| sysprep_per_server_max_connections | string | Maximum connections | | 5
+| sysprep_computer_name | string | Computer name | |
+| sysprep_workgroup_name | string | Workgroup name | | WORKGROUP
+| sysprep_spec_override | boolean | Override specification | | false
+| addr_mode | string | Address mode | static, dhcp | dhcp
+| linux_host_name | string | Computer name | |
+| sysprep_domain_admin | string | Domain admin | |
+| sysprep_change_sid | boolean | Change SID | | true
+| sysprep_domain_name | string | Domain name | |
+| sysprep_upload_file | string | Upload | |
+| gateway | string | Gateway | |
+| ip_addr | string | IP address | |
+| linux_domain_name | string | Domain name | |
+| sysprep_domain_password | string | Domain password | |
+| sysprep_auto_logon | boolean | Auto Logon | | true
+| sysprep_enabled | string | Customize | | disabled
+| sysprep_delete_accounts | boolean | Delete accounts | | false
+| sysprep_upload_text | string | Sysprep text | |
+| wins_servers | string | WINS server list | |
+| subnet_mask | string | Subnet mask | |
+| sysprep_full_name | string | Full name | |
+| sysprep_auto_logon_count | integer | Auto logon count | 1, 2, 3 | 1
+| customization_template_id | integer | Script name | |
+| root_password | string | Root password | |
+| hostname | string | Host name | |
+| customization_template_script | string | Script text | |
+|=====================
+
+
+[[schedule-attributes]]
+== Schedule Attributes
+
+These attributes are used in the *vm_fields* attribute group:
+
+[cols="1<,1<,3<,2<,1<",options="header",]
+|=====================
+| Attribute | Type | Description | Values | Default
+| schedule_type | string | When to provision | schedule, immediately (_On Approval_) | immediately
+| vm_auto_start | boolean | Power on virtual machines after creation | | true
+| schedule_time | time | Time to provision on | |
+| retirement | integer | Time until retirement | 0 (_Indefinite_), 1.month, 3.months, 6.months | 0
+| retirement_warn | integer | Retirement warning | 1.week, 2.weeks, 30.days | 1.week
 |=====================
 
 
@@ -68,61 +187,22 @@ These attributes are used in the *requester* attribute group:
 | request_notes | string | Notes
 |=====================
 
-[[custom-attributes]]
-== Custom Attributes
-
-[cols="1<,1<,3<,2<,1<",options="header",]
-|=====================
-| Attribute | Type | Description | Values | Default
-| dns_servers | string | DNS server list | |
-| sysprep_organization | string | Organization | |
-| sysprep_password | string | New Administrator Password | |
-| sysprep_custom_spec | string | Name | |
-| sysprep_server_license_mode | string | Identification | perServer, perSeat |
-| ldap_ous | string | LDAP Group | |
-| sysprep_timezone | string | Timezone | |
-| dns_suffixes | string | DNS Suffix list | |
-| sysprep_product_id | string | ProductID | |
-| sysprep_identification | string | Identification | domain, workgroup |
-| sysprep_per_server_max_connections | string | Maximum Connections | | 5
-| sysprep_computer_name | string | Computer Name | |
-| sysprep_workgroup_name | string | Workgroup Name | | WORKGROUP
-| sysprep_spec_override | boolean | Override Specification | | false
-| addr_mode | string | Address Mode | static, dhcp | dhcp
-| linux_host_name | string | Computer Name | |
-| sysprep_domain_admin | string | Domain Admin | |
-| sysprep_change_sid | boolean | Change SID | | true
-| sysprep_domain_name | string | Domain Name | |
-| sysprep_upload_file | string | Upload | |
-| gateway | string | Gateway | |
-| ip_addr | string | IP Address | |
-| linux_domain_name | string | Domain Name | |
-| sysprep_domain_password | string | Domain Password | |
-| sysprep_auto_logon | boolean | Auto Logon | | true
-| sysprep_enabled | string | Customize | | disabled
-| sysprep_delete_accounts | boolean | Delete Accounts | | false
-| sysprep_upload_text | string | Sysprep Text | |
-| wins_servers | string | WINS Server list | |
-| subnet_mask | string | Subnet Mask | |
-| sysprep_full_name | string | Full Name | |
-| sysprep_auto_logon_count | integer | Auto Logon Count | 1, 2, 3 | 1
-| customization_template_id | integer | Script Name | |
-| root_password | string | Root Password | |
-| hostname | string | Host Name | |
-| customization_template_script | string | Script Text | |
-|=====================
 
 [[environment-attributes]]
 == Environment Attributes
 
+These attributes cannot be passed directly. To use these attributes,
+provide *additional_values* and allow customization methods to use these attributes, then modify the request accordingly.
+
+
 [cols="1<,1<,3<,2<,1<",options="header",]
 |=====================
 | Attribute | Type | Description | Values | Default
-| new_datastore_grow_increment | integer | Grow Increment (GB) | |
-| new_datastore_create | boolean | Create Datastore | | false
+| new_datastore_grow_increment | integer | Grow increment (GB) | |
+| new_datastore_create | boolean | Create datastore | | false
 | placement_cluster_name | integer | Name | |
 | new_datastore_aggregate | string | Aggregate | |
-| new_datastore_max_size | integer | Max Size (GB) | |
+| new_datastore_max_size | integer | Max size (GB) | |
 | new_datastore_storage_controller | string | Controller | |
 | cluster_filter | integer | Filter | |
 | host_filter | integer | Filter | |
@@ -132,87 +212,12 @@ These attributes are used in the *requester* attribute group:
 | placement_ds_name | integer | Name | |
 | new_datastore_fs_type | string | FS Type | NFS, VMFS | NFS
 | rp_filter | integer | Filter | |
-| new_datastore_thin_provision | string | Thin Provision | |
-| placement_auto | boolean | Choose Automatically | | false
+| new_datastore_thin_provision | string | Thin provision | |
+| placement_auto | boolean | Choose automatically | | false
 | new_datastore_size | integer | Size (GB) | |
 | new_datastore_autogrow | string | Autogrow | | false
 | placement_folder_name | integer | Name | |
 | new_datastore_name | string | Name | |
 | placement_rp_name | integer | Name | |
 | placement_dc_name | integer | Name | |
-|=====================
-
-[[service-catalog-attributes]]
-== Service Catalog Attributes
-
-[cols="1<,1<,3<",options="header",]
-|=====================
-| Attribute | Type | Description | Default
-| number_of_vms | integer | Count. _Max_: 50 | 1
-| vm_description | string | VM Description. _Max length_: 100 |
-| vm_prefix | string | VM Name Prefix/Suffix |
-| src_vm_id | integer | Name |
-| vm_name | string | VM Name |
-| pxe_image_id | string | Image |
-| pxe_server_id | integer | Server |
-| host_name | string | Host Name |
-| provision_type | string | Provision Type | vmware
-| linked_clone | boolean | Linked Clone | false
-| snapshot | string | Snapshot |
-| vm_filter | integer | Filter |
-|=====================
-
-[[schedule-attributes]]
-== Schedule Attributes
-
-[cols="1<,1<,3<,2<,1<",options="header",]
-|=====================
-| Attribute | Type | Description | Values | Default
-| schedule_type | string | When to Provision | schedule, immediately (_On Approval_) | immediately
-| vm_auto_start | boolean | Power on virtual machines after creation | | true
-| schedule_time | time | Time to Provision on | |
-| retirement | integer | Time until Retirement | 0 (_Indefinite_), 1.month, 3.months, 6.months | 0
-| retirement_warn | integer | Retirement Warning | 1.week, 2.weeks, 30.days | 1.week
-|=====================
-
-[[desktop-attributes]]
-== Desktop Attributes
-
-[cols="1<,1<,3<,2<,1<",options="header",]
-|=====================
-| Attribute | Type | Description | Value | Default
-| vdi_new_desktop_pool_name | string | Name | |
-| vdi_farm | string | Farm | |
-| vdi_new_desktop_pool_assignment | string | Desktop Pools Assignment | |
-| vdi_desktop_pool_create | boolean | Create Desktop Pool | | false
-| vdi_desktop_pool | string | Desktop Pools | |
-| vdi_enabled | boolean | Enabled | | false
-| vdi_desktop_pool_user_list | string | User List | |
-|=====================
-
-[[network-attributes]]
-== Network Attributes
-
-[cols="1<,1<,3<",options="header",]
-|=====================
-| Attribute | Type | Description
-| vlan | string | vLan
-| mac_address | string | MAC Address
-|=====================
-
-[[hardware-attributes]]
-== Hardware Attributes
-
-[cols="1<,1<,3<,2<,1<",options="header",]
-|=====================
-| Attribute | Type | Description | Values | Default
-| disk_format | string | Disk Format | thick, thin, unchanged | unchanged
-| cpu_limit | integer | CPU (MHz) | |
-| memory_limit | integer | Memory (MB) | |
-| number_of_sockets | integer | Number of Sockets | 1, 2, 4, 8 | 1
-| cores_per_socket | integer | Cores per Socket | 1, 2, 4, 8 | 1
-| cpu_reserve | integer | CPU (MHz) | |
-| vm_memory | string | Memory (MB) | 1024, 2048, 4096 | 1024
-| memory_reserve | integer | Memory (MB) | |
-| network_adapters | integer | Network Adapters | 1, 2, 3, 4 | 1
 |=====================
