Added a section on migrating to CFME 4.0 to the Release Notes.

--- a/doc-Release_Notes/master.adoc
+++ b/doc-Release_Notes/master.adoc
@@ -22,6 +22,8 @@ include::register_cfme.adoc[]
 
 include::ui_locale.adoc[]
 
+include::migrating_cfme.adoc[]
+
 include::enabling_public_amis.adoc[]
 
 include::changes_in_the_core_set_of_ruby_gems.adoc[]
