Promoted indentation of all chapters in the Satellite integration guide.

--- a/doc-Integration_with_Red_Hat_Satellite/Adding_a_Satellite_6_Provider_to_CloudForms.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Adding_a_Satellite_6_Provider_to_CloudForms.adoc
@@ -1,5 +1,5 @@
 [[Adding_a_Satellite_6_Provider_to_CloudForms]]
-=== Adding a Satellite 6 Provider to CloudForms
+== Adding a Satellite 6 Provider to CloudForms
 To start provisioning bare metal machines, you need at least one Red Hat Satelllite 6 provider added to Red Hat CloudForms Management Engine. The following procedure show how to do this.
 
 [arabic]
