--- a/doc-Integration_with_Red_Hat_Satellite/Introduction.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Introduction.adoc
@@ -1,5 +1,5 @@
 [[Introduction]]
-=== Introduction
+== Introduction
 
 Satellite 6 is a subscription and system management tool that provides a way to provision hosts (both virtual and bare metal) and configure them using a set of Puppet modules. Red Hat CloudForms 3.2 provides functionality to integrate with a Red Hat Satellite 6 server and take advantage of its features. This includes:
 
