--- a/doc-Integration_with_Red_Hat_Satellite/Reprovisioning_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Reprovisioning_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
@@ -1,5 +1,5 @@
 [[Reprovisioning_a_Bare_Metal_Host_in_Red_Hat_CloudForms]]
-=== Reprovisioning a Bare Metal Host in Red Hat CloudForms
+== Reprovisioning a Bare Metal Host in Red Hat CloudForms
 
 The current inventory of your Red Hat Satellite 6 server is now visable in Red Hat CloudForms Management Engine. The next procedure is an example of reprovisioning an existing bare metal system into a new hostgroup. For this example, your Red Hat Satellite 6 environment requires the following:
 
