--- a/doc-Integration_with_Red_Hat_Satellite/Tagging_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Tagging_a_Bare_Metal_Host_in_Red_Hat_CloudForms.adoc
@@ -1,5 +1,5 @@
 [[Tagging_a_Bare_Metal_Host_in_Red_Hat_CloudForms]]
-=== Tagging a Bare Metal Host in Red Hat CloudForms
+== Tagging a Bare Metal Host in Red Hat CloudForms
 
 Red Hat CloudForms can also control policy settings of bare metal systems from Red Hat Satellite 6 through tagging. Tagging attaches levels of metadata to help define the policy rules required for a set of systems.
 
