--- a/doc-Integration_with_Red_Hat_Satellite/Triggering_a_Refresh_of_a_Satellite_6_Provider.adoc
+++ b/doc-Integration_with_Red_Hat_Satellite/Triggering_a_Refresh_of_a_Satellite_6_Provider.adoc
@@ -1,5 +1,5 @@
 [[Triggering_a_Refresh_of_a_Satellite_6_Provider]]
-=== Triggering a Refresh of a Satellite 6 Provider
+== Triggering a Refresh of a Satellite 6 Provider
 
 Your Satellite 6 provider can still create new hosts independently of Red Hat CloudForms. Your Red Hat CloudForms appliance detects these changes after an automatic refresh period. However, you can trigger a manual refresh to avoid waiting for the automatic refresh.
 
