--- a/doc-Appliance_Hardening_Guide/SSH_Keys.adoc
+++ b/doc-Appliance_Hardening_Guide/SSH_Keys.adoc
@@ -60,7 +60,7 @@ Copy the public key to the appliance using the +ssh-copy-id+ command:
 ----
 +
 The command copies the public key to the appliance.
-You might recieve a prompt for the password of the root user on the appliance. 
+You might receive a prompt for the password of the root user on the appliance. 
 
 . Test the SSH key authentication: 
 +
