--- a/doc-Appliance_Hardening_Guide/SSH_Keys.adoc
+++ b/doc-Appliance_Hardening_Guide/SSH_Keys.adoc
@@ -79,7 +79,7 @@ If you entered a passphrase for the key, the command prompts you for the passphr
 PermitRootLogin without-password
 ----
 +
-This forces the [literal]+root+ user account to use certificates instead of passwords for SSH logins.
+This forces the [literal]+root+ user account to use certificates instead of passwords for SSH login.
 This means only your local system can access the appliance. 
 
 
