--- a/doc-Appliance_Hardening_Guide/SCAP.adoc
+++ b/doc-Appliance_Hardening_Guide/SCAP.adoc
@@ -5,7 +5,7 @@ The Security Content Automation Protocol (SCAP) is a set of standards to assist 
 
 To apply the SCAP standards to your appliance's server, use the following procedure:
 
-1.  Log in to the applaince as the **root** user. This displays the Bash prompt.
+1.  Log in to the appliance as the **root** user. This displays the Bash prompt.
 2.  Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
 3.  Press +Enter+ to manually configure settings.
 4.  Select **Harden Appliance Using SCAP Configuration**.
