--- a/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
+++ b/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
@@ -6,7 +6,7 @@ This technology enables enterprises with existing virtual infrastructures to imp
 		
 Red Hat CloudForms 4.0 is comprised of a single component, the CloudForms Management Engine. It has the following feature sets:
 		
-* Insight: Discovery, Monitoring, Utilization, Performance, Reporting, Analytics, Chargeback, and Trending.
+* Insight: Discovery, Monitoring, Utilization, Performance, Reporting, Analytic, Chargeback, and Trending.
 * Control: Security, Compliance, Alerting, and Policy-Based Resource, and Configuration Enforcement.
 * Automate: IT Process, Task and Event, Provisioning, and Workload Management and Orchestration.
 * Integrate: Systems Management, Tools and Processes, Event Consoles, Configuration Management Database (CMDB), Role-based Administration (RBA), and Web Services.
