Edited typo -- capitalized DNS in two places.

--- a/doc-Scripting_Actions_in_CloudForms/topics/Virtual_Machine_Properties1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/Virtual_Machine_Properties1.adoc
@@ -87,7 +87,7 @@ When using these items in a method, prefix them with `vm.`. For example: `vm.sto
 |Used Storage |used_storage
 |V Pct Used Disk Space |v_pct_used_disk_space
 |Vdi Available |vdi_available
-|Vdi Connection Dns Name |vdi_connection_dns_name
+|Vdi Connection DNS Name |vdi_connection_dns_name
 |Vdi Connection Logon Server |vdi_connection_logon_server
 |Vdi Connection Name |vdi_connection_name
 |Vdi Connection Remote Ip Address |vdi_connection_remote_ip_address
@@ -99,7 +99,7 @@ When using these items in a method, prefix them with `vm.`. For example: `vm.sto
 |Vdi Endpoint Name |vdi_endpoint_name
 |Vdi Endpoint Type |vdi_endpoint_type
 |Vdi User Appdata |vdi_user_appdata
-|Vdi User Dns Domain |vdi_user_dns_domain
+|Vdi User DNS Domain |vdi_user_dns_domain
 |Vdi User Domain |vdi_user_domain
 |Vdi User Home Drive |vdi_user_home_drive
 |Vdi User Home Path |vdi_user_home_path
